# fitgraph

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-05-17-fitgraph.md  (+2 more)
scripts/: _demo_watchdog.sh  build_embeddings.py  build_graph.py  demo_down.sh  demo_up.sh  download_data.py  evaluate.py  extract_facets.py  retrain.py  seed_catalog.py  train.py
src/fitgraph/: __init__.py  config.py
tests/: test_config.py
tests/api/: __init__.py  test_routes.py  test_serving.py
tests/data/: test_polyvore.py  test_splits.py
tests/db/: test_queries.py
tests/embeddings/: test_clip_encoder.py  test_fusion.py  test_text_encoder.py
tests/eval/: __init__.py  test_grids.py  test_metrics.py
tests/feedback/: __init__.py  test_stream.py  test_trigger.py
tests/fixtures/: metadata_sample.json  outfits_sample.json
tests/graph/: test_builder.py
tests/models/: __init__.py  test_hgat.py  test_type_aware.py
tests/retrieval/: test_pgvector_store.py
tests/training/: __init__.py  test_loss.py  test_negatives.py  test_trainer.py
web/: AGENTS.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx  template.tsx
web/components/: Audience.tsx  BrowseGrid.tsx  CategoryNav.tsx  FashionBand.tsx  Nav.tsx  OutfitBuilder.tsx  OutfitTray.tsx  RunwayHero.tsx  SaveOutfitModal.tsx  SearchGrid.tsx  StageFigure.tsx  SuggestionCard.tsx  UploadZone.tsx  WrapBackground.tsx
web/lib/: api.ts  slots.ts
(+55 files in other folders)
