[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fitgraph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torch-geometric",
    "open_clip_torch",
    "sentence-transformers",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "psycopg[binary]",
    "pgvector",
    "redis",
    "pydantic",
    "pydantic-settings",
    "pillow",
    "numpy",
    "scikit-learn",
    "kaggle",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
